# Resume-Fit-Scorer

./: .gitignore  README.md  main.py  pyproject.toml
src/: matcher.py  parser.py  report.py  report_pdf.py  scorer.py  skills_taxonomy.py
