[project]
name = "resume-fit-scorer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "numpy>=2.5.1",
    "pdfplumber>=0.11.10",
    "reportlab>=5.0.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
]
